--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-checkbox-tree": "^1.8.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
